kubernetes/apps/zigbee2mqtt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
spec:
  selector:
    app: zigbee2mqtt
  ports:
    - { name: http, port: 8080, targetPort: http }
