kubernetes/apps/zigbee2mqtt/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zigbee2mqtt
  namespace: zigbee2mqtt
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts: [zigbee2mqtt.lab.skyhaven.ltd]
      secretName: zigbee2mqtt-tls
  rules:
    - host: zigbee2mqtt.lab.skyhaven.ltd
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zigbee2mqtt
                port:
                  number: 8080
